# genetic-syndrome-classification

./: .gitignore  README.md  REPORT.md  create_sample_data.py  main.py  pyproject.toml  requirements.txt
src/inference_service/: API_DOCS.md  __init__.py  app.py  model_manager.py  models.py
src/steps/: classification.py  classification_visualization.py  data_preprocessing.py  data_visualization.py  evaluation.py  pipeline.py
