[project]
name = "genetic-syndromes-classify"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.132.0",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "pyarrow==23.0.1",
    "pydantic==2.12.5",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
    "uvicorn==0.41.0",
]
